--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <!-- 角色图片区：可替换为她喜欢的动漫角色或你的定制图 -->
-    <img src="角色图.png" alt="加油角色" class="character-img"> <!-- ②角色图 -->
+    <img src="https://image.baidu.com/search/detail?z=0&word=%E7%9F%A2%E6%B3%BD%E5%A6%AE%E5%8F%AF%E5%8A%A0%E6%B2%B9%E6%89%93%E6%B0%94%E5%9B%BE&hs=0&pn=19&spn=0&di=7498023338351001601&pi=0&rn=1&tn=baiduimagedetail&is=0%2C0&ie=utf-8&oe=utf-8&lm=&cs=1485219134%2C102505775&os=1252315102%2C1139760437&simid=1485219134%2C102505775&adpicid=0&lpn=0&fr=click-pic&fm=&ic=&hd=&latest=&copyright=&isImgSet=&commodity=&hot=&imgratio=&imgformat=&sme=&width=0&height=0&cg=&bdtype=0&oriquery=&objurl=https%3A%2F%2Fbkimg.cdn.bcebos.com%2Fpic%2F0b55b319ebc4b7455ebf58b6c9fc1e178a821562&fromurl=ippr_z2C%24qAzdH3FAzdH3Fkwthj_z%26e3Bkwt17_z%26e3Bv54AzdH3Ftpj4AzdH3F%25E0%25lF%25Ad%25Em%25Bn%25BD%25Em%25l0%25Ac%25El%25Am%25llAzdH3F8c99ccac&gsm=1e&islist=&querylist=&lid=11956582379902038216" alt="加油角色" class="character-img"> <!-- ②角色图 -->
 
     <!-- 倒计时区 -->
     <div class="countdown" id="countdown"></div>
