--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>为[她的名字]加油！考试必胜！</title>
+    <title>为磷子加油！考试必胜！</title>
     <style>
         * {margin: 0; padding: 0; box-sizing: border-box; font-family: '微软雅黑', sans-serif;}
         body {
